Fix de erratas y setup antes de cambiar el idoma

--- a/Contexto y alcance/Alcance/Objetivos secundarios.tex
+++ b/Contexto y alcance/Alcance/Objetivos secundarios.tex
@@ -1,1 +1,11 @@
 \subsection{Objetivos secundarios}
+Otros objetivos que deben cumplirse, pero sin ser críticos para el éxito del proyecto son las siguientes:
+\begin{itemize}
+    \item Visualización de datos con Open OnDemand: permitir que los usuarios consulten de manera sencilla 
+    las cuotas de uso y los costes asociados mediante un front-end desarrollado específicamente.
+    \item El sistema desarrollado debe ser portable, preparando así la inminente migración de los clusters a un servicio externo de housing\footnote{El servicio
+    de \textit{housing} en un Centro de Procesamiento de Datos (CPD), también llamado \textit{colocation}, 
+    consiste en alquilar un espacio físico dentro de ese CPD para instalar, alojar y operar los servidores y otros equipos de IT propios 
+    del cliente. El proveedor del CPD se encarga de la infraestructura física (electricidad, refrigeración, seguridad y conectividad), 
+    mientras que el cliente conserva la propiedad y la gestión de su hardware. }.
+\end{itemize}
