--- a/Contexto y alcance/Alcance/Requerimientos no funcionales.tex
+++ b/Contexto y alcance/Alcance/Requerimientos no funcionales.tex
@@ -1,1 +1,8 @@
 \subsection{Requerimientos no funcionales}
+A continuación, se detallan los requerimientos no funcionales para el correcto funcionamiento del proyecto: 
+\begin{itemize}
+    \item La aplicación deberá estar programada en Python, siguiendo buenas prácticas de desarrollo y con control de versiones en GitHub.
+    \item El sistema deberá ser escalable, permitiendo la adaptación a un mayor número de usuarios o recursos en el futuro.
+    \item El tiempo de procesamiento diario deberá ser razonable, evitando retrasos en la imputación de costes.
+    \item La solución deberá ser segura, garantizando la integridad de los datos transferidos entre BigQuery y SAP.
+\end{itemize}
