--- a/Contexto y alcance/Contextualización/Actores implicados.tex
+++ b/Contexto y alcance/Contextualización/Actores implicados.tex
@@ -11,8 +11,8 @@ los intereses, así como las posibles resistencias y beneficios del proyecto.
     y por tanto, un actor principal.
     \item El Departamento Financiero del instituto se ve directamente beneficiado por el proyecto. Garantizando que los costes se 
     registran correctamente en el sistema SAP, habiendo una trazabilidad clara de los gastos de cada laboratorio. Haciendo así 
-    que el coste del  cálculo del precio a cobrar asociado se vea abismalmente reducido.
+    que el coste del  cálculo del precio a cobrar asociado se vea considerablemente reducido.
     \item El autor del proyecto, Pau Navarro Álvarez.
     \item El equipo de Scientific Computing, que incluye a los administradores de sistemas y otros profesionales de TI.
-    \item El resto de personal del proyecto, como el director del proyecto Roberto Riveiro Insua y el tutor Alex Pajuelo Gonzalez.
+    \item El resto de personal del proyecto, como el director del proyecto Roberto Riveiro Insúa y el tutor Alex Pajuelo González.
 \end{itemize}
