--- a/Contexto y alcance/Justificación/main.tex
+++ b/Contexto y alcance/Justificación/main.tex
@@ -1,6 +1,6 @@
 \section{Justificación}
 Este proyecto se justifica en la necesidad de sustituir el actual sistema manual de imputación 
-de costes de almacenaje y cómputo, basado en hojas de cálculo. Ideando una solución automatizada, 
+de costes de almacenaje y cómputo, basado en hojas de cálculo. Proponiendo una solución automatizada, 
 robusta y escalable. El método actual no solo implica un gran coste humano requiriendo varias semanas 
 de trabajo administrativo, sino que también es susceptible a errores humanos y carece de transparencia 
 necesaria para un control financiero. En este contexto, resulta conveniente diseñar e implementar una 
