--- a/Contexto y alcance/Metodología y herramientas de seguimiento/Metodología.tex
+++ b/Contexto y alcance/Metodología y herramientas de seguimiento/Metodología.tex
@@ -1,1 +1,8 @@
 \subsection{Metodología}
+La metodología que se seguirá durante el desarrollo de este proyecto será de carácter secuencial, 
+siguiendo el modelo en cascada. Este enfoque resulta adecuado para el proyecto ya que se desarrollará 
+únicamente por una persona, asimismo, los objetivos y alcance están claramente delimitados.
+
+La estructura en cascada permite organizar el trabajo en tareas consecutivas, de manera que cada 
+tarea se acaba antes de dar inicio a la siguiente. Así se garantiza una progresión y organización adecuada, 
+desde la definición de requisitos hasta la entrega final del proyecto.
