--- a/Planificación temporal/Descripción de las tareas/Búsqueda e investigación.tex
+++ b/Planificación temporal/Descripción de las tareas/Búsqueda e investigación.tex
@@ -7,14 +7,15 @@ La suma de las horas de este bloque es de unas \textbf{50 horas}. Las tareas son
     \newline Esta tarea no tiene dependencias.
     \newline Recursos: \textit {LaTeX, director del proyecto y documentación interna del centro.}
     
-    \item \textbf{BI-2. Investigación de tecnologías y herramientas:} Investigación detallada de la documentación y APIs (Application 
-    Programming Interfaces) necesarias para la integración. Esto permite comprender las diferentes funcionalidades y 
+    \item \textbf{BI-2. Investigación de tecnologías y herramientas:} Investigación detallada de la documentación y \textit{APIs}\footnote{Una \textit{API o Application 
+    Programming Interfaces} es un conjunto de reglas y protocolos que permite que diferentes aplicaciones de software se comuniquen entre sí, intercambiando datos y 
+    funcionalidades de manera estandarizada} necesarias para la integración. Esto permite comprender las diferentes funcionalidades y 
     aspectos que se pueden mejorar de las mismas. Se espera dedicar unas \textbf{30 horas}.
     \newline Esta tarea no tiene dependencias.
     \newline Recursos: \textit {LaTeX, director del proyecto y páginas especializadas de documentación.}
     
     \item \textbf{BI-3. Estudio de soluciones alternativas:} Análisis del Estado del Arte con un enfoque en la justificación de las herramientas seleccionadas.
-    Se investigan y comparan diferentes alternativas tecnológicas para asegurar que las herramientas elegidas son las más adecuadas para los objetivos del proyecto. Se estima una dedicación de unas \textbf{5 horas}.
+    Se Investigación y comparación de las  diferentes alternativas tecnológicas para asegurar que las herramientas elegidas son las más adecuadas para los objetivos del proyecto. Se estima una dedicación de unas \textbf{5 horas}.
     \newline Esta tarea no tiene dependencias.
     \newline Recursos: \textit {LaTeX, director del proyecto y páginas especializadas de documentación.}
 \end{itemize}
