--- a/Planificación temporal/Descripción de las tareas/Gestión del proyecto.tex
+++ b/Planificación temporal/Descripción de las tareas/Gestión del proyecto.tex
@@ -30,7 +30,7 @@ Se estima que la duración total de este bloque sea de unas \textbf{138 horas}. 
     \item \textbf{GP-5. Reuniones con el director y el departamento:} A lo largo del desarrollo del proyecto, se llevarán 
     a cabo reuniones semanales, de aproximadamente media hora de duración, con el director del proyecto y personal del 
     departamento. Se estima una dedicación de unas \textbf{6 horas}. 
-    \newline Recursos: \textit {Papel y bolígrafo, director del proyecto y personal del departamento..}
+    \newline Recursos: \textit {Papel y bolígrafo, director del proyecto y personal del departamento.}
     
     \item \textbf{GP-6. Redacción de la memoria:} Elaboración de la memoria final del proyecto, integrando todas las secciones
     desarrolladas a lo largo del trabajo. Se estima una dedicación de unas \textbf{45 horas}.
@@ -44,8 +44,7 @@ Se estima que la duración total de este bloque sea de unas \textbf{138 horas}. 
     \newline Recursos: \textit {LaTeX y software de diseño de presentaciones.}
     
     \item \textbf{GP-8. Defensa del proyecto:}
-    Finalmente, se realiza la defensa del proyecto ante el tribunal correspondiente. Se estima una dedicación de unas \textbf{4 horas} 
-    para todo el proceso.
+    Finalmente, se realiza la defensa del proyecto ante el tribunal correspondiente. Se estima una dedicación de unas \textbf{4 horas}.
     \newline La tarea depende de la tarea GP-7.
     \newline Recursos: \textit {LaTeX, software de diseño de presentaciones, director del proyecto, ponente del trabajo y tribunal.}
 \end{itemize}
