--- a/Planificación temporal/Estimaciones/main.tex
+++ b/Planificación temporal/Estimaciones/main.tex
@@ -33,7 +33,7 @@
         DP-7 & Despliegue en entorno productivo & 16 h & DP-6 \\
         \hline
     \end{tabular}
-    \caption{Resumen del tiempo aproximado para cada tarea}
+    \caption{Resumen del tiempo aproximado para cada tarea. Elaboración propia.}
     \label{tab:estimaciones}
 \end{table}
 
