--- a/Planificación temporal/Gestión del riesgo/main.tex
+++ b/Planificación temporal/Gestión del riesgo/main.tex
@@ -1,21 +1,29 @@
 \subsection{Gestión del riesgo}
 
-Una buena planifiacación temporal debe incluir la gestión de riesgos. En este apartado se identifican 
-los posibles riesgos que pueden afectar al proyecto, se evalúa su probabilidad e impacto, y se proponen 
+Una buena planificación temporal debe incluir la gestión de riesgos. En este apartado se identifican
+los posibles riesgos que pueden afectar al proyecto, se evalúa su probabilidad e impacto, y se proponen
 planes de mitigación para cada uno de ellos.
 
+% Nota: Asegúrate de tener en el preámbulo: \usepackage{tabularx} (y opcionalmente \usepackage{array})
+% Si no puedes modificar el preámbulo, sustituye tabularx por tabular y fija manualmente p{...} en lugar de X.
 \begin{table}[H]
     \centering
-    \begin{tabular}{|c|c|c|c|}
+    \small % reduce ligeramente el tamaño de fuente para que quepa
+    \setlength{\tabcolsep}{4pt} % reduce separación horizontal entre columnas
+    \renewcommand{\arraystretch}{1.2} % mejora legibilidad vertical
+    \begin{tabularx}{\textwidth}{|p{2.6cm}|p{2.1cm}|p{1.5cm}|X|}
         \hline
-        \textbf{Rieso} & \textbf{Probabilidad} & \textbf{Impacto} & \textbf{Plan de mitigación} \\
+        	\textbf{Riesgo} & \textbf{Probabilidad} & \textbf{Impacto} & \textbf{Plan de mitigación} \\
         \hline
-        BI-1 & Estudio de las soluciones existentes & 15 h & - \\
-        BI-2 & Investigación de tecnologías y herramientas & 30 h & - \\
-        BI-3 & Estudio de soluciones alternativas & 5 h & - \\
-        
+        Errores en la transformación de datos & Media & Medio & Validar y auditar los datos en cada etapa del proceso ETL. Utilizar un entorno de desarrollo para pruebas exhaustivas con datos de muestra previa antes de integrar cambios en el entorno principal. \\
         \hline
-    \end{tabular}
-    \caption{Tabla de evaluación de riesgos. Elaboración propia.}
-    \label{tab:estimaciones}
+        Caída o indisponibilidad de nodos del clúster HPC & Muy alta & Bajo & Planificar el procesamiento en horarios de menor carga. \\
+        \hline
+        Errores en la automatización & Media & Medio & Realizar pruebas exhaustivas del script de automatización en la máquina virtual. Establecer permisos y configuraciones robustas. Usar un sistema de registro para identificar y depurar errores. \\
+        \hline
+        Errores típicos de desarrollo & Alta & Bajo & Realizar revisiones de código periódicas. Implementar un control de versiones y realizar copias de seguridad. Utilizar herramientas de depuración y pruebas unitarias. \\
+        \hline
+    \end{tabularx}
+    \caption{Evaluación de riesgos y planes de mitigación. Elaboración propia.}
+    \label{tab:riesgos}
 \end{table}
