UPD: chapuzada historica con el idioma, he hecho renombre en el esqueleto, sigue dando incompatibilidad

--- a/toc.tex
+++ b/toc.tex
@@ -1,4 +1,14 @@
-\renewcommand{\contentsname}{Continguts}
+\renewcommand{\contentsname}{\'Indice}
+\renewcommand*{\listfigurename}{\'Indice de Figuras}
+\renewcommand{\listtablename}{\'Indice de Tablas}
+\renewcommand{\figurename}{Figura}
+\renewcommand{\tablename}{Tabla}
+% \renewcommand{\appendixname}{Anexo}
+% \renewcommand\appendixtocname{Anexos}
+% \renewcommand\appendixpagename{ANEXOS}
+% \renewcommand{\refname}{Bibliograf\'ia}
+% \renewcommand{\nomname}{\'Indice de S\'imbolos y Abreviaciones}
+% \renewcommand{\abstractname}{Resumen} %en article
 
 \tableofcontents
 \clearpage
