Presupuesto y sostenibilidad esqueleto

--- a/Planificación temporal/Estimaciones/main.tex
+++ b/Planificación temporal/Estimaciones/main.tex
@@ -12,7 +12,7 @@
         GP-3 & Gestión económica y sostenibilidad & 18 h & GP-2 \\
         GP-4 & Entrega final de GEP & 10 h & GP-3 \\
         GP-5 & Reuniones con el director y el departamento & 6 h & - \\
-        GP-6 & Redacción de la memoria & 45 h & GP-x\footnotemark, BI-x, DP-x\\
+        GP-6 & Redacción de la memoria & 45 h & GP-x, BI-x, DP-x\\
         GP-7 & Presentación de la defensa & 20 h & GP-6 \\
         GP-8 & Defensa del proyecto & 4 h & GP-7 \\
         \hline
@@ -36,5 +36,3 @@
     \caption{Resumen del tiempo aproximado para cada tarea. Elaboración propia.}
     \label{tab:estimaciones}
 \end{table}
-
-\footnotetext{a excepción de GP-7 y GP-8, porque son tareas posteriores.}\
