--- a/main.tex
+++ b/main.tex
@@ -383,7 +383,11 @@
 % \cleardoublepage
 %\input{Contexto y alcance/main}
 
-\input{Planificación temporal/main}
+%\input{Planificación temporal/main}
+
+\input{Gestión económica/main}
+
+\input{Informe de sostenibilidad/main}
 
 % \cleardoublepage
 
