ultimo empujon entrega 3 GEP

--- a/Gestión económica/Contingencias.tex
+++ b/Gestión económica/Contingencias.tex
@@ -1,1 +1,27 @@
 \subsection{Contingencias}
+Existe una gran posibilidad de que durante la ejecución del proyecto surjan imprevistos que 
+requieran recursos adicionales no contemplados en el presupuesto inicial. Es por eso que 
+para mitigar el riesgo que implican estos imprevistos, se ha decidido asignar un porcentaje 
+del presupuesto total a contingencias. El porcentaje habitual de contingencia para un proyecto 
+de desarrollo de software (o sector tecnológico en general) suele oscilar entre el 10\% y el 20\% 
+del presupuesto total. Se ha optado por asignar un \textbf{15\%} del presupuesto total a contingencias, 
+lo que nos porporciona los siguientes valores:
+
+
+\begin{table}[H]
+    \begin{center}
+    \begin{tabular}{|c|c|c|c|}
+        \hline
+        \textbf{Recurso} & \textbf{Importe} & \textbf{contingencia} \\ 
+        \hline
+        Recursos humanos & 12.176,58 € & 1.826,49 € \\
+        Recursos materiales directos & 2.676,00 € & 401,40 € \\
+        Recursos materiales indirectos  & 6.447,00 € & 967,05 € \\
+        \hline
+        \multicolumn{2}{|l|}{\textbf{Total}}  & \textbf{3.194,94 €} \\
+        \hline
+    \end{tabular}
+    \caption{Presupuesto total del proyecto. Elaboración propia.}
+    \label{tab:calculo_contingencias}
+    \end{center}
+\end{table}
