--- a/Gestión económica/main.tex
+++ b/Gestión económica/main.tex
@@ -6,8 +6,14 @@ que el proyecto se mantenga dentro del presupuesto y se logren los objetivos est
 
 \input{Gestión económica/Recursos humanos.tex}
 
-\input{Gestión económica/Recursos Hardware.tex}
+\input{Gestión económica/Recursos Materiales Directos.tex}
+
+\input{Gestión económica/Recursos Materiales Indirectos.tex}
 
 \input{Gestión económica/Recursos Software.tex}
 
 \input{Gestión económica/Contingencias.tex}
+
+\input{Gestión económica/Imprevistos.tex}
+
+\input{Gestión económica/Estimacion final del presupuesto.tex}
