--- a/main.tex
+++ b/main.tex
@@ -381,9 +381,9 @@
 % \setcounter{page}{11}
 \include{toc}
 % \cleardoublepage
-%\input{Contexto y alcance/main}
+\input{Contexto y alcance/main}
 
-%\input{Planificación temporal/main}
+\input{Planificación temporal/main}
 
 \input{Gestión económica/main}
 
