--- a/Gestión económica/Contingencias.tex
+++ b/Gestión económica/Contingencias.tex
@@ -12,7 +12,7 @@ lo que nos porporciona los siguientes valores:
     \begin{center}
     \begin{tabular}{|c|c|c|c|}
         \hline
-        \textbf{Recurso} & \textbf{Importe} & \textbf{contingencia} \\ 
+        \textbf{Recurso} & \textbf{Importe} & \textbf{Contingencias} \\ 
         \hline
         Recursos humanos & 12.176,58 € & 1.826,49 € \\
         Recursos materiales directos & 2.676,00 € & 401,40 € \\
@@ -21,7 +21,7 @@ lo que nos porporciona los siguientes valores:
         \multicolumn{2}{|l|}{\textbf{Total}}  & \textbf{3.194,94 €} \\
         \hline
     \end{tabular}
-    \caption{Presupuesto total del proyecto. Elaboración propia.}
+    \caption{Tabla de contingencias. Elaboración propia.}
     \label{tab:calculo_contingencias}
     \end{center}
 \end{table}
