--- a/Gestión económica/Estimacion final del presupuesto.tex
+++ b/Gestión económica/Estimacion final del presupuesto.tex
@@ -11,9 +11,9 @@
         Recursos materiales directos & 2.676,00 € \\
         Recursos materiales indirectos  & 6.447,00 € \\
         Contingencias & 3.194,94 € \\
-        Imprevistos & 0,250 € \\
+        Imprevistos & 249,96 € \\
         \hline
-        \textbf{Total} & \textbf{X €} \\
+        \textbf{Total} & \textbf{24.744,48 €} \\
         \hline
     \end{tabular}
     \caption{Presupuesto total del proyecto. Elaboración propia.}
