--- a/Gestión económica/Recursos Humanos.tex
+++ b/Gestión económica/Recursos Humanos.tex
@@ -9,7 +9,7 @@ cada una de las cuales tiene un coste diferente asociado. Estos roles son los si
     \item  \textbf{Desarrollador:} Responsable de tareas de desarrollo de software, incluyendo el desarrollo y pruebas de código. Salario anual: 29.000 €
 \end{itemize}
 
-Se han estimado unos salarios por hora y el coste total para la empreasa de la siguiente manera (base reguladora + IRPF + Seguridad Social):
+Se han estimado unos salarios por hora y el coste total para la empreasa de la siguiente manera:
 
 \begin{table}[H]
     \centering
