--- a/Gestión económica/Recursos Materiales Directos.tex
+++ b/Gestión económica/Recursos Materiales Directos.tex
@@ -4,7 +4,7 @@ En este caso, se ha considerado el uso del mismo equipo para los diferentes role
 necesario para que cada uno pueda realizar sus funciones. Los recursos descritos tienen una vida útil finita, por lo que es necesario
 calcular la amortización asociada. Para ello, se ha seguido la siguente fórmula:   
 \begin{equation}
-    \text{Amortización horaria} = \frac{\text{Valor de adquisición}}{\text{Vida útil en horas}}
+    \text{Amortización horaria (€)} = \frac{\text{Valor de adquisición(€)}}{\text{Vida útil (h)}}
 \end{equation}
 
 
