Informe de sostenibilidad hecho

--- a/Gestión económica/Estimacion final del presupuesto.tex
+++ b/Gestión económica/Estimacion final del presupuesto.tex
@@ -1,5 +1,7 @@
 \subsection{Estimacion final del presupuesto}
 
+Para terminar con la gestión económica del proyecto esta tabla da un resumen de los costes asociados al proyecto y la
+suma total de estos
 
 \begin{table}[H]
     \begin{center}
