--- a/Informe de sostenibilidad/Dimensión ambiental.tex
+++ b/Informe de sostenibilidad/Dimensión ambiental.tex
@@ -1,1 +1,18 @@
 \subsection{Dimensión ambiental}
+
+\textbf{¿Has estimado el impacto ambiental que tendrá la realización del proyecto? 
+¿Te has planteado minimizar el impacto, por ejemplo, reutilizando recursos?}
+
+No se ha realizado una estimación formal del impacto ambiental del proyecto, ya que
+este se centra en la tarificación de recursos y no en la producción o consumo físico de un producto.
+Sin embargo, se ha considerado y aplicado la reutilización de recursos, en este caso, los equipos
+de trabajo. Además, se migra parte del sistema a la nube, lo que puede contribuir a una
+reducción del consumo energético local y a una gestión más eficiente de los recursos informáticos.
+
+\textbf{¿Cómo se resuelve actualmente el problema que quieres abordar (estado del arte)? 
+¿En qué mejorará ambientalmente tu solución a las existentes?}
+
+Actualmente, en el IRB Barcelona, no se dispone de un sistema de tarificación de recursos, por 
+lo que no existe una solución directa al problema que se pretende abordar. La solución propuesta
+introduce un sistema de tarificación que puede incentivar un uso más eficiente y responsable
+de los recursos disponibles, lo que podría traducirse en una reducción del consumo energético
