--- a/Informe de sostenibilidad/Dimensión económica.tex
+++ b/Informe de sostenibilidad/Dimensión económica.tex
@@ -1,1 +1,15 @@
 \subsection{Dimensión económica}
+
+\textbf{¿Has estimado el coste de la realización del proyecto (recursos humanos
+y materiales)?}
+
+Sí, se ha realizado una estimación del coste del proyecto, una parte fundamental del proyecto.
+Dicha estimación se encuentra en los apartados 6.x en la Gestión económica del proyecto.
+
+\textbf{¿Cómo se resuelve actualmente el problema que quieres abordar (estado del arte)? 
+¿En qué mejorará económicamente tu solución a las existentes?}
+
+Siguiendo con la respuesta del apartado anterorior no existe una solución actual al problema a abordar.
+Pero se espera que la solución propuesta mejore económicamente las cuentas de la institución. Al optimizar
+los costes de los recursos y asignarlos de manera eficiente, se espera que la institución pueda reaprovechar
+recursos y así poder comprar equipamiento nuevo que mejore la calidad del servicio ofrecido.
