--- a/Informe de sostenibilidad/Dimensión social.tex
+++ b/Informe de sostenibilidad/Dimensión social.tex
@@ -1,1 +1,25 @@
 \subsection{Dimensión social}
+
+\textbf{¿Qué crees que te va a aportar a nivel personal la realización de este proyecto?}
+
+Este proyecto me va a permitir crecer a nivel personal y profesional a pasos agigantados. 
+Sin ir más lejos, me brindará la oportunidad de aplicar los conocimientos teóricos adquiridos 
+durante mi formación académica en un contexto real, lo que fortalecerá mis habilidades 
+prácticas y mi capacidad para resolver problemas complejos.
+
+\textbf{¿Cómo se resuelve actualmente el problema que quieres abordar(estado del arte)? ¿En 
+qué mejorará socialmente tu solución a las existentes?}
+
+Como ya se ha mencionado, el instituto actualmente no cuenta con un sistema de tarificación.
+Por lo que a nivel social, los investigadores y estudiantes tendrán una realización
+más estrecha con el departamento de informática, lo que fomentará la colaboración y el
+intercambio de conocimientos entre ambos, para conseguir un uso más eficiente y responsable 
+de los recusrsos.
+
+\textbf{¿Existe una necesidad real del proyecto?}
+En una primera instancia, podría parecer que este proyecto no aborda una necesidad social, 
+únicamente una motivación económica. Sin embargo, al implementar un sistema de tarificación, 
+el instituto puede reaprovechar unos recursos que anteriormente no se estaban utilizando.
+Esto abre las puertas a que más investigadores y estudiantes puedan acceder a estos recursos,
+acabando en un mayor número de proyectos y trabajos de investigación que, en última instancia,
+pueden tener un impacto positivo en la sociedad.
