--- a/Informe de sostenibilidad/main.tex
+++ b/Informe de sostenibilidad/main.tex
@@ -1,7 +1,10 @@
 \section{Informe de sostenibilidad}
 
+\input{Informe de sostenibilidad/Autoevaluación.tex}
+
+
+\input{Informe de sostenibilidad/Dimensión ambiental.tex}
+
 \input{Informe de sostenibilidad/Dimensión económica.tex}
 
 \input{Informe de sostenibilidad/Dimensión social.tex}
-
-\input{Informe de sostenibilidad/Dimensión ambiental.tex}
